# mist-autoresearch

./: LICENSE  README.md  pyproject.toml
docs/: getting_started.md  usage.md
mist_autoresearch/: __init__.py  base.py  cli.py  history.py  notebook.py  stopping.py
mist_autoresearch/postprocessing/: __init__.py  evaluator.py  researcher.py
tests/: test_base.py  test_cli.py  test_history.py  test_notebook.py  test_stopping.py
tests/postprocessing/: test_evaluator.py  test_researcher.py
